--- a/scoapp/templates/login.html
+++ b/scoapp/templates/login.html
@@ -91,7 +91,9 @@
 			}
 		}
 	</style>
-
+<script>
+    const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+</script>
 </head>
 <body>    
     <div class="container">
