--- a/scoapp/templates/user_navbar.html
+++ b/scoapp/templates/user_navbar.html
@@ -171,8 +171,9 @@
     <h1>Not logged in</h1>
     <nav>
         <ul>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="login">Login</a></li>
+            <li><a href="">Sign Up</a></li>
+            <h1>chumma testing gu</h1>
         </ul>
     </nav>
 {% endif %}
