--- a/scoapp/templates/user_navbar.html
+++ b/scoapp/templates/user_navbar.html
@@ -173,7 +173,11 @@
         <ul>
             <li><a href="login">Login</a></li>
             <li><a href="">Sign Up</a></li>
-            <h1>chumma testing gu</h1>
+            <h1>User: {{ user.username }}<br>
+Authenticated: ....{{ user.is_authenticated }}...<br>
+Role: ...{{ user.role }}....<br>
+Display Role: ....{{ user.get_role_display }}....
+</h1>
         </ul>
     </nav>
 {% endif %}
