--- a/scoapp/templates/kyc.html
+++ b/scoapp/templates/kyc.html
@@ -103,7 +103,7 @@
         <center>  <h1><i class="bi bi-building"></i> {{ c.name }}</h1></center>
           <p class="detail"><i class="bi bi-geo-alt-fill"></i><strong>Address:</strong> {{ c.address }}</p>
           <p class="detail"><i class="bi bi-telephone-fill"></i><strong>Phone:</strong> {{ c.phone }}</p>
-          <p class="detail"><i class="bi bi-receipt-cutoff"></i><strong>GST Number:</strong> {{ c.gst }}</p>
+          <p class="detail"><i class="bi bi-receipt-cutoff"></i><strong>GST Number:</strong> {{ c.gst }} and <strong>GST</strong> {{c.gsttype}} %</p>
           <p class="detail"><i class="bi bi-bank"></i><strong>Bank:</strong> {{ c.bank }}</p>
           <p class="detail"><i class="bi bi-key-fill"></i><strong>IFSC:</strong> {{ c.ifsc }}</p>
           <p class="detail"><i class="bi bi-hourglass-split"></i><strong>Payment Duration:</strong> {{ c.due_date }} days</p>
